# resurface

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/labelled/: labels.csv
data/raw/none/: .gitkeep
data/raw/quotes/: .gitkeep
data/raw/recipes/: .gitkeep
data/raw/workouts/: .gitkeep
notebooks/: 01_explore_dataset.ipynb  02_tune_thresholds.ipynb  03_future_ml_model.ipynb
src/: __init__.py  eval.py  features.py  heuristics.py  ocr.py
tests/: __init__.py  test_features.py  test_heuristics.py
ui/: label_app.py
